--- a/site01/index.html
+++ b/site01/index.html
@@ -8,12 +8,37 @@
 </head>
 <body>
     <header class="menu-principal">
-        <div class="logo">
-            <img src="img/logo.png" alt="">
-        </div>
-        <div class="redes-sociais">
-
-        </div>
+        <main>
+            <div class="header-1">
+                <div class="logo">
+                    <img src="img/logo.png" alt="">
+                </div>
+                <div class="redes-sociais">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="img/rss.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="img/face.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="img/tw.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="img/linkedin.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </main>
     </header>
     
     <script src="script.js"></script>
