--- a/site01/index.html
+++ b/site01/index.html
@@ -40,7 +40,23 @@
             </div>
         </main>
     </header>
-    
+    <main>
+        <div class="header-2">
+            <div class="menu">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Abou Us</a></li>
+                    <li><a href="">Service</a></li>
+                    <li><a href="">Pages</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="busca">
+                <input type="text">
+            </div>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
