estilizando o menu e a search bar

--- a/site01/index.html
+++ b/site01/index.html
@@ -40,7 +40,7 @@
             </div>
         </main>
     </header>
-    <main>
+    <main class="col-100 menu-urls">
         <div class="header-2">
             <div class="menu">
                 <ul>
@@ -53,7 +53,7 @@
                 </ul>
             </div>
             <div class="busca">
-                <input type="text">
+                <input  placeholder="Search Something" type="text">
             </div>
         </div>
     </main>
