--- a/site01/index.html
+++ b/site01/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <title>Primeira página</title>
 </head>
 <body>
@@ -57,6 +58,17 @@
             </div>
         </div>
     </main>
+    <div class="col-100">
+        <div class="slider-principal">
+            <img src="img/banner.png" alt="">
+            <img src="img/banner.png" alt="">
+            <img src="img/banner.png" alt="">
+        </div>
+    </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
