--- a/site01/index.html
+++ b/site01/index.html
@@ -63,6 +63,7 @@
             <img src="img/banner.png" alt="">
             <img src="img/banner.png" alt="">
             <img src="img/banner.png" alt="">
+            <img src="img/banner.png" alt="">
         </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
