--- a/site01/index.html
+++ b/site01/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <title>Primeira página</title>
 </head>
 <body>
@@ -66,10 +66,15 @@
             <img src="img/banner.png" alt="">
         </div>
     </div>
+    <div class="col-100">
+        <div class="content texto-destaque">
+            <h1>Lorem ipsum is <strong>simply dummy</strong> of the printing</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere praesentium, provident aut deleniti at voluptate eveniet explicabo atque ut! Illum accusamus praesentium suscipit qui quaerat officiis eum, repellat perferendis. Perspiciatis.</p>
+        </div>
+    </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
