implementação de textos

--- a/site01/index.html
+++ b/site01/index.html
@@ -70,6 +70,21 @@
         <div class="content texto-destaque">
             <h1>Lorem ipsum is <strong>simply dummy</strong> of the printing</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere praesentium, provident aut deleniti at voluptate eveniet explicabo atque ut! Illum accusamus praesentium suscipit qui quaerat officiis eum, repellat perferendis. Perspiciatis.</p>
+            <div class="col-3">
+                <img src="img/content-1.png" alt="">
+                <h3><strong>Lorem ipsum</strong> is simply</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto blanditiis consequatur culpa officia voluptas hic deleniti sunt.</p>
+            </div>
+            <div class="col-3">
+                <img src="img/content-2.png" alt="">
+                <h3><strong>Lorem ipsum</strong> is simply</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, amet illo esse molestiae quam doloremque tempora reiciendis.</p>
+            </div>
+            <div class="col-3">
+                <img src="img/content-3.png" alt="">
+                <h3><strong>Lorem ipsum</strong> is simply</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae ullam repellendus error commodi, necessitatibus quia.</p>
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
