--- a/site01/index.html
+++ b/site01/index.html
@@ -70,20 +70,71 @@
         <div class="content texto-destaque">
             <h1>Lorem ipsum is <strong>simply dummy</strong> of the printing</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere praesentium, provident aut deleniti at voluptate eveniet explicabo atque ut! Illum accusamus praesentium suscipit qui quaerat officiis eum, repellat perferendis. Perspiciatis.</p>
-            <div class="col-3">
+            <div class="col-3 bloco-texto">
                 <img src="img/content-1.png" alt="">
-                <h3><strong>Lorem ipsum</strong> is simply</h3>
+                <h3><b>Lorem ipsum</b> is simply</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto blanditiis consequatur culpa officia voluptas hic deleniti sunt.</p>
             </div>
-            <div class="col-3">
+            <div class="col-3 bloco-texto" style="padding-top: 5%;">
                 <img src="img/content-2.png" alt="">
-                <h3><strong>Lorem ipsum</strong> is simply</h3>
+                <h3><b>Lorem ipsum</b> is simply</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, amet illo esse molestiae quam doloremque tempora reiciendis.</p>
             </div>
-            <div class="col-3">
+            <div class="col-3 bloco-texto">
                 <img src="img/content-3.png" alt="">
-                <h3><strong>Lorem ipsum</strong> is simply</h3>
+                <h3><b>Lorem ipsum</b> is simply</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae ullam repellendus error commodi, necessitatibus quia.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-100 bloco-imagens-texto">
+        <div class="content" style="margin-left: 15%; float: left;">
+            <div class="col-3 bloco-texto bloco-imagem">
+                <img src="img/imagem1.png" alt="">
+                <p><b>Lorem ipsum is simply</b></p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur esse placeat, aspernatur facere magni saepe ullam asperiores molestiae</p>
+            </div>
+            <div class="col-3 bloco-texto bloco-imagem">
+                <img src="img/imagem2.png" alt="">
+                <p><b>Lorem ipsum is simply</b></p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur esse placeat, aspernatur facere magni saepe ullam asperiores molestiae</p>
+            </div>
+            <div class="col-3 bloco-texto bloco-imagem">
+                <img src="img/imagem3.png" alt="">
+                <p><b>Lorem ipsum is simply</b></p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur esse placeat, aspernatur facere magni saepe ullam asperiores molestiae</p>
+            </div>
+        </div>
+        <div class="content" style="margin-left: 15%; float: left;">
+            <div class="col-3 bloco-texto bloco-imagem">
+                <img src="img/imagem2.png">
+                <p><b>Lorem Ipsum is simply</b></p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting of the
+                    industry. Lorem
+                    Ipsum has been
+                    the and scrambled it.
+                    atype specimen
+                </p>
+            </div>
+            <div class="col-3 bloco-texto bloco-imagem">
+                <img src="./img/imagem3.png">
+                <p><b>Lorem Ipsum is simply</b></p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting of the
+                    industry. Lorem
+                    Ipsum has been
+                    the and scrambled it.
+                    atype specimen
+                </p>
+            </div>
+            <div class="col-3 bloco-texto bloco-imagem">
+                <img src="./img/imagem1.png">
+                <p><b>Lorem Ipsum is simply</b></p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting of the
+                    industry. Lorem
+                    Ipsum has been
+                    the and scrambled it.
+                    atype specimen
+                </p>
             </div>
         </div>
     </div>
