finalização do site

--- a/site01/index.html
+++ b/site01/index.html
@@ -138,6 +138,61 @@
             </div>
         </div>
     </div>
+    <div class="col-100 bloco-logos">
+        <div class="content">
+            <div class="col-4">
+                <img src="img/logo1.png" alt="logo">
+            </div>
+            <div class="col-4">
+                <img src="img/logo2.png" alt="logo">
+            </div>
+            <div class="col-4" style="padding-top: 20px;">
+                <img src="img/logo3.png" alt="logo">
+            </div>
+            <div class="col-4">
+                <img src="img/logo4.png" style="padding-top: 10px;" alt="logo">
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="col-100 footer">
+            <div class="content">
+                <div class="col-4">
+                    <h3><b>Populr Post</b></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, nam natus non.</p>
+                    <span class="clock">
+                        25-September 2023
+                    </span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, provident dolore.</p>
+                    <span class="clock">
+                        17-April 2023
+                    </span>
+                </div>
+                <div class="col-4">
+                    <h3><b>Tags</b></h3>
+                    <p>Lorem <b>ipsum</b> dolor sit amet consectetur adipisicing elit. Ipsum perspiciatis aut <b>facilis</b> asperiores voluptas consequuntur perferendis blanditiis! <b></b> ratione autem repellat incidunt architecto debitis <b>quibusdam</b> earum beatae dolores voluptate. Illum.</p>
+                </div>
+                <div class="col-4">
+                    <h3><b>A little about us</b></h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum at numquam quas. <br> quia impedit iste libero asperiores minus doloribus perferendis quo natus, <br> dolores voluptas ut soluta quisquam expedita temporibus?</p>
+                </div>
+                <div class="col-4">
+                    <h3><b>Get in touch</b></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis eligendi.</p>
+                    <p class="location">Texas,US</p>
+                    <p class="email">email@email.com</p>
+                    <p class="phone">890-09880-45590</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div class="col-100 footer-2">
+        <div class="content">
+            <div>
+                <p>@ 2013 Web world. All rights reserved. Theme by cssautther</p>
+            </div>
+        </div>
+    </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
