--- a/site01/index.html
+++ b/site01/index.html
@@ -190,6 +190,30 @@
         <div class="content">
             <div>
                 <p>@ 2013 Web world. All rights reserved. Theme by cssautther</p>
+                <div class="redes-sociais-2">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="img/rss.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="img/face.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="img/tw.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="img/linkedin.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
